kubernetes/monitoring/grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ssp-monitoring
  name: grafana
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - grafana.trayla.org
    secretName: letsencrypt-staging
  rules:
  - host: grafana.trayla.org
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
